# SAT-Algorithms

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  clean.sh  compile_data.py  data_sniffer.py  mkcnf.py  plotter.py  result_averages.py  run_benchmark.sh
dp_naive/: CMakeLists.txt  dp_naive.cpp
dpll_mcl/: CMakeLists.txt  dpll_mcl  dpll_mcl.cpp  dpll_utils.cpp  dpll_utils.h
dpll_naive/: CMakeLists.txt  dpll_naive.cpp
dpll_rand/: CMakeLists.txt  dpll_rand.cpp
resolution_naive_first_fit/: CMakeLists.txt  resolution_naive_first_fit.cpp
utilities/: CMakeLists.txt  memutils.h
