cmake_minimum_required(VERSION 3.30)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)

option(ENABLE_RESOLUTION_NAIVE "" YES)
option(ENABLE_DP_NAIVE "Whether to build the Davis-Putnamm algorithm (naive approach)" YES)
option(ENABLE_DPLL_RAND "Whether to build the Davis–Putnam–Logemann–Loveland algorithm (RAND approach)" YES)
project(sat-algorithms)

add_subdirectory(utilities)
target_sources(memutils PUBLIC FILE_SET HEADERS FILES BASE_DIRS utilities ${CMAKE_CURRENT_BINARY_DIR}/utilities)
if (ENABLE_RESOLUTION_NAIVE)
    add_subdirectory(resolution_naive_first_fit)
endif ()
if (ENABLE_DP_NAIVE)
    add_subdirectory(dp_naive)
endif ()
if (ENABLE_DPLL_RAND)
    add_subdirectory(dpll_rand)
endif ()